<resources>
    <string name="app_name">App-Commander</string>

    <string name="welcome_title">Welcome to \nApp-Commander.</string>
    <string name="welcome_catch_phrase">Your programmable multi-device execution helper for your apps.</string>
    <string name="welcome_action">Start</string>
    <string name="welcome_do_not_show_again">Hide welcome screen on next start</string>

    <string name="scripts_title">Your scripts</string>
    <string name="scripts_hint">Hint: Activate the 'Developer options' on your device.</string>
    <string name="scripts_hint_devices">Your connected devices:</string>
    <string name="scripts_hint_no_devices">Connect your devices over USB and click refresh.</string>
    <string name="scripts_hint_no_devices_refresh">Refresh</string>
    <string name="scripts_open_script_file">Open script file</string>
    <string name="scripts_add_new_script">Add new script</string>
    <string name="scripts_filter_section_title">Filter</string>
    <string name="scripts_terminal_section_title">Terminal</string>
    <string name="scripts_logging_section_title">Logging</string>
    <string name="scripts_terminal_placeholder">adb shell input tap 200 200</string>
    <string name="scripts_json_parsing_error">The scripts-file cannot parse. Only default scripts are loaded. Please fix the error:\n%1$s</string>
    <string name="scripts_json_multi_scripts">The scripts-file contains multiple scripts, splitted by "&amp;&amp;". Please migrate to "scripts" and put each script into an array.</string>
    <string name="scripts_json_old_script_field">The scripts-file contains an old list object with scripts. I have migrated it your you.</string>

    <string name="settings_title">Settings</string>
    <string name="settings_preference_show_welcome_screen">Hide welcome screen on startup.</string>
    <string name="settings_preference_show_filter_section">Show filter section on scripts-screen.</string>
    <string name="settings_preference_show_terminal_section">Show terminal section on scripts-screen.</string>
    <string name="settings_preference_show_logging_section">Show logging section on scripts-screen.</string>
    <string name="settings_preference_track_scripts_file_delay_slider_label">Automatically refresh scripts list all %1$s seconds.</string>
    <string name="settings_preference_ui_appearance_label">Selected ui appearance: '%1$s'.</string>
    <string name="settings_preference_ui_appearance_system">System</string>
    <string name="settings_preference_ui_appearance_dark">Dark</string>
    <string name="settings_preference_ui_appearance_light">Light</string>
    <string name="settings_preference_backup_label">Automatically backups scripts up to %1$s MB in your home folder (~/.app_commander/backups).</string>
    <string name="settings_footer">Developed with ❤ in Münster by Jan Oliver Zieger\nVersion %1$s</string>

    <string name="edit_title">Change or add a script</string>
    <string name="edit_script_name">Name or description of your script</string>
    <string name="edit_script_comment">Optional comment for the script</string>
    <string name="edit_sub_script_comment">Comment</string>
    <string name="edit_enter_or_edit">Enter or edit your script(s)</string>
    <string name="edit_run_all_scripts">run all scripts in order</string>
    <string name="edit_script_placeholder">adb shell input tap </string>
    <string name="edit_select_platform">Select affected platform</string>
    <string name="edit_select_devices">Select device for testing your script</string>
    <string name="edit_action_save">Save script</string>
    <string name="edit_action_remove">Remove script</string>
    <string name="edit_action_abort">Close</string>
    <string name="edit_confirmation_remove">Are your sure you want to remove this script?</string>
    <string name="edit_confirmation_change">You have changes in your script. Are you sure you want to leave?</string>
    <string name="edit_error_cannot_create_backup_directory">Cannot create backup directory. Please check your home folder (~/.app_commander/backups). Error is: %1$s</string>
    <string name="edit_error_cannot_create_backup_file">Cannot create backup file. Error is: %1$s</string>
    <string name="edit_error_not_enough_disk_space_in_backup_directory">Not enough disk space to backup old file. Current taken disk space: %1$s MB. Your maximum allowed backup size is: %2$s MB. Please increase the size of the backup in settings or remove old files in ~/.app_commander/backups.</string>
    <string name="edit_error_unknown_error">Error is: %1$s</string>
    <string name="edit_error_remove_script">Error in removing the script. Error is: %1$s</string>
    <string name="edit_error_save_script">Error in saving the script. Error is: %1$s</string>
    <string name="edit_error_update_script">Error in updating the script. Error is: %1$s</string>
    <string name="edit_success_save_script">Successfully saved or update your script.</string>

    <string name="confirmation_yes">Yes</string>
    <string name="confirmation_no">No</string>
</resources>
