...
	onRemoveScript: (() -> Unit)? = null,
	onAddScript: (() -> Unit)? = null,
) {
	var inputValue by remember(script) { mutableStateOf(script) }
	TextField(
		value = inputValue,
		modifier = Modifier.fillMaxWidth().testTag("text_field_script_input"),
		colors =
			TextFieldDefaults.colors(
				unfocusedContainerColor = Color.White,
				focusedContainerColor = Color.White,
				focusedIndicatorColor = Color.Transparent,
				unfocusedIndicatorColor = Color.Transparent,
...
	IconButton(
		onClick = onExecuteScriptText,
	) {
		Icon(
			imageVector = FeatherIcons.Play,
			tint = MaterialTheme.colorScheme.primary,
			contentDescription = "Execute script text",
		)
	}
}

@Preview
@Composable
...
